--- a/src/app/component/users-list/users-list.component.html
+++ b/src/app/component/users-list/users-list.component.html
@@ -3,9 +3,10 @@
 <div *ngFor="let user of usersList">
   <div class="card mb-3">
     <div class="card-body">
-      <h5 class="card-title">{{user.name}}</h5>
-      <h6 class="card-subtitle mb-2 text-muted">{{user.surname}}</h6>
+      <h5 class="card-title">{{user.name}} {{user.surname}}</h5>
       <h7 class="card-subtitle mb-2 text-muted">age: {{user.age}}</h7>
+      <h6 class="card-title mr-4 text-muted text-right" >id: {{user.id}}</h6>
+      <a [routerLink]="['/','users',user.id]" class="card-link float-right ml-3">Open</a>
     </div>
   </div>
 </div>
